Accommodation Service clean code architecture, MongoDb setup

--- a/AccommodationService/AccommodationService.Presentation/AccommodationService.Presentation.csproj
+++ b/AccommodationService/AccommodationService.Presentation/AccommodationService.Presentation.csproj
@@ -7,8 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CassandraCSharpDriver" Version="3.20.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AccommodationService.Infrastructure\AccommodationService.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
