saga implementation started

--- a/UserService/UserService.Presentation/appsettings.json
+++ b/UserService/UserService.Presentation/appsettings.json
@@ -5,5 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Keycloak": {
+    "Realm": "user-store",
+    "AuthServerUrl": "http://localhost:9090/",
+    "SslRequired": "external",
+    "Resource": "public-client",
+    "PublicClient": true,
+    "ConfidentialPort": 0,
+    "VerifyTokenAudience": false,
+    "ClientSecret": "**********",
+    "GrantType": "password"
+  },
   "AllowedHosts": "*"
 }
