--- a/AccommodationService/AccommodationService.Infrastructure/AccommodationService.Infrastructure.csproj
+++ b/AccommodationService/AccommodationService.Infrastructure/AccommodationService.Infrastructure.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Confluent.Kafka" Version="2.5.3" />
     <PackageReference Include="MongoDB.Driver" Version="2.28.0" />
   </ItemGroup>
 
