--- a/PaymentService/PaymentService.Application/PaymentService.Application.csproj
+++ b/PaymentService/PaymentService.Application/PaymentService.Application.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Keycloak.AuthServices.Authentication" Version="2.5.3" />
+    <ProjectReference Include="..\PaymentService.Domain\PaymentService.Domain.csproj" />
   </ItemGroup>
 
 </Project>
