--- a/PaymentService/PaymentService.Infrastructure/PaymentService.Infrastructure.csproj
+++ b/PaymentService/PaymentService.Infrastructure/PaymentService.Infrastructure.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Keycloak.AuthServices.Authentication" Version="2.5.3" />
+    <ProjectReference Include="..\PaymentService.Application\PaymentService.Application.csproj" />
   </ItemGroup>
 
 </Project>
