--- a/ReservationService/ReservationService.Application/ReservationService.Application.csproj
+++ b/ReservationService/ReservationService.Application/ReservationService.Application.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Keycloak.AuthServices.Authentication" Version="2.5.3" />
+    <ProjectReference Include="..\ReservationService.Domain\ReservationService.Domain.csproj" />
   </ItemGroup>
 
 </Project>
