--- a/ReservationService/ReservationService.Infrastructure/ReservationService.Infrastructure.csproj
+++ b/ReservationService/ReservationService.Infrastructure/ReservationService.Infrastructure.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Keycloak.AuthServices.Authentication" Version="2.5.3" />
+    <ProjectReference Include="..\ReservationService.Application\ReservationService.Application.csproj" />
   </ItemGroup>
 
 </Project>
