--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,32 +1,6 @@
 version: '3.8'
 
 services:
-  db:
-    image: postgres
-    container_name: postgres_container
-    restart: always
-    ports:
-      - "5432:5432"
-    environment:
-      POSTGRES_USER: vveljko
-      POSTGRES_PASSWORD: vveljkopass
-    volumes:
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
-    networks:
-      - thesis
-
-  pgadmin:
-    image: dpage/pgadmin4
-    container_name: pgadmin_container
-    restart: always
-    ports:
-      - "8888:80"
-    environment:
-      PGADMIN_DEFAULT_EMAIL: vveljko@gmail.com
-      PGADMIN_DEFAULT_PASSWORD: vveljkopass
-    networks:
-      - thesis
-
   mongo:
     image: mongo:latest
     container_name: mongodb
@@ -68,7 +42,28 @@ services:
       - "--import-realm"
     networks:
       - thesis
-
+  zookeeper:
+    image: confluentinc/cp-zookeeper:latest
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    ports:
+      - 2181:2181
+    
+  kafka:
+    image: confluentinc/cp-kafka:latest
+    depends_on:
+      - zookeeper
+    ports:
+      - 9092:9092
+      - 29092:29092
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
 networks:
   thesis:
     name: thesis
