--- a/AccommodationService/AccommodationService.Infrastructure/AccommodationService.Infrastructure.csproj
+++ b/AccommodationService/AccommodationService.Infrastructure/AccommodationService.Infrastructure.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Confluent.Kafka" Version="2.5.3" />
     <PackageReference Include="MongoDB.Driver" Version="2.28.0" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
   </ItemGroup>
 
   <ItemGroup>
