--- a/TransactionService/TransactionService.Infrastructure/TransactionService.Infrastructure.csproj
+++ b/TransactionService/TransactionService.Infrastructure/TransactionService.Infrastructure.csproj
@@ -7,11 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Confluent.Kafka" Version="2.5.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\TransactionService.Application\TransactionService.Application.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
   </ItemGroup>
 
 </Project>
