--- a/ReservationService/ReservationService.Application/ReservationService.Application.csproj
+++ b/ReservationService/ReservationService.Application/ReservationService.Application.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\ReservationService.Domain\ReservationService.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Mediatr" Version="12.4.1" />
+  </ItemGroup>
+
 </Project>
