--- a/ReservationService/ReservationService.Infrastructure/ReservationService.Infrastructure.csproj
+++ b/ReservationService/ReservationService.Infrastructure/ReservationService.Infrastructure.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\ReservationService.Application\ReservationService.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
+  </ItemGroup>
+
 </Project>
