--- a/PaymentService/PaymentService.Infrastructure/PaymentService.Infrastructure.csproj
+++ b/PaymentService/PaymentService.Infrastructure/PaymentService.Infrastructure.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\PaymentService.Application\PaymentService.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+  </ItemGroup>
+
 </Project>
