--- a/ireservation-client/angular.json
+++ b/ireservation-client/angular.json
@@ -27,8 +27,7 @@
               }
             ],
             "styles": [
-              "src/custom-theme.scss",
-              "src/styles.css"
+              "src/custom-theme.scss"
             ],
             "scripts": []
           },
