--- a/ireservation-client/package.json
+++ b/ireservation-client/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.1.0",
+    "@angular/animations": "^18.2.4",
     "@angular/cdk": "^18.2.4",
     "@angular/common": "^18.1.0",
     "@angular/compiler": "^18.1.0",
@@ -22,6 +22,7 @@
     "@angular/router": "^18.1.0",
     "@material/dialog": "^14.0.0",
     "keycloak-js": "^25.0.5",
+    "primeng": "^17.18.10",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
