--- a/PaymentService/PaymentService.Application/PaymentService.Application.csproj
+++ b/PaymentService/PaymentService.Application/PaymentService.Application.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
     <PackageReference Include="Stripe.Net" Version="45.13.0" />
   </ItemGroup>
 
