--- a/ireservation-client/package.json
+++ b/ireservation-client/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
     "@material/dialog": "^14.0.0",
+    "@microsoft/signalr": "^8.0.7",
     "keycloak-js": "^25.0.5",
     "primeng": "^17.18.10",
     "rxjs": "~7.8.0",
